# matis

./: .gitignore  README.md  blueprint-v2.md  blueprint-v3.md  blueprint.md  pyproject.toml
.claude/: CLAUDE.md
mantis/: __init__.py
mantis/adapters/: canvas_adapter.py
mantis/context/: conversation.py
mantis/engine/: runner.py
mantis/generate/: tool_generator.py
mantis/llm/: openai_provider.py
mantis/middleware/: graph_search.py
mantis/pipeline/: __init__.py  models.py  phases.py  pipeline.py
mantis/search/: __init__.py  graph_search.py
mantis/tools/: decorator.py  meta.py  registry.py
mantis/workflow/: models.py  tools.py
tests/: test_agent.py  test_approval.py  test_context.py  test_generator.py  test_graph_tool.py  test_model_client.py  test_pipeline.py  test_registry_v2.py  test_sandbox.py  test_sandbox_tools.py  test_tools.py  test_trace.py  test_v3_integration.py
