[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantis"
version = "0.1.0"
description = "AI Agent 실행 엔진 — 도구를 갈아끼워서 쏜다"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
search = ["graph-tool-call>=0.13"]
sandbox = ["docker>=7.0"]
state = ["asyncpg>=0.29"]
all = [
    "graph-tool-call>=0.13",
    "docker>=7.0",
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mantis = "mantis.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
